203-2-with-jenkins-pipeline-for-phonebook-app-on-docker-swarm was changed

--- a/devops/projects/203-1-without-jenkins-pipeline-phonebook-app-on-docker-swarm/phonebook-without-jenkins-cfn-template.yaml
+++ b/devops/projects/203-1-without-jenkins-pipeline-phonebook-app-on-docker-swarm/phonebook-without-jenkins-cfn-template.yaml
@@ -3,13 +3,15 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: >
   This Cloudformation Template deploys Phonebook Application to five Docker Machines on EC2 Instances
   which are ready for Docker Swarm operations.
+
 Parameters:
   KeyPairName:
     Description: Enter the name of your Key Pair for SSH connections.
     Type: AWS::EC2::KeyPair::KeyName
     ConstraintDescription: Must be one of the existing EC2 KeyPair
+
 Resources:
-  InstanceConnectPolicy:
+  InstanceConnectPolicy: # Private key i herhangi biryere yazmayacagiz, dolayisiyla private key siz bir cozum icin once policy olustururuz sonra bu policy i Role a atariz. private key e ihtiyac duymadan makinelerin birbirine policy araciligi ile public key gondermesini saglayan bir policy
     Type: "AWS::IAM::ManagedPolicy"
     Properties:
       PolicyDocument: #required
@@ -19,32 +21,35 @@ Resources:
             Action:
               - ec2-instance-connect:SendSSHPublicKey
             Resource:
-              - !Sub arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:instance/*
-            Condition: {"StringEquals": {"ec2:osuser": "ec2-user"}}
+              - !Sub arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:instance/* # hangi makineleer birbirine baglanmak istiyorsa yada siz bunun baglanmasini istediginiz makine hangisiyse. Sondaki * in anlami bu policy i hangi instance a  atarsam o instance bu hakka sahip olur
+            Condition: {"StringEquals": {"aws:ResourceTag/project":"202"}} # Name project keyvalue 202 olan makineler kullanacak. Bu tage sahip olan makinelerde bu policy uygulanacak
           - Effect: Allow
             Action:
               - ec2:DescribeInstances
             Resource: "*"
-  EC2InstanceConnect:
+  
+  EC2InstanceConnect: # node larin kendi arasinda konusabilmesi ve ECR a ulasabilmesi icin role tanimliyoruz
     Type: "AWS::IAM::Role"
     Properties:
-      AssumeRolePolicyDocument: 
+      AssumeRolePolicyDocument:
         Statement:
           - Effect: Allow
             Principal:
               Service:
-              - ec2.amazonaws.com
+              - ec2.amazonaws.com # bu Role ec2 lar da tanimli olacak
             Action:
               - 'sts:AssumeRole'
-      ManagedPolicyArns:
-        - !Ref InstanceConnectPolicy
-        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess
-  EC2ConnectProfile:
+      ManagedPolicyArns: # Bu Role e 2 tane Policy ekliyoruz. birisi AWS de olmayan bizim yukarida hazirladigimiz Instance Connect Policy digeri AWS de olan Container Registry Full Access policy
+        - !Ref InstanceConnectPolicy # AWS de olmayan bir policy kullanmak istedigimizde bunu once yukaridaki gibi olustururuz sonra burada refere ederiz.
+        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess # AWS de varolan bir policy kullanirken ARN no girmek yeterli
+  
+  EC2ConnectProfile: # EC2 lari olustururken sadece bu profile i ec2 ya ilistirmek yeterli olacak Policy->Role->Profile üclüsü birarada sanirim
     Type: "AWS::IAM::InstanceProfile"
     Properties:
       Roles: #required
-        - !Ref EC2InstanceConnect
-  DockerMachinesSecurityGroup:
+        - !Ref EC2InstanceConnect # eklemek istedigimiz Role u refere ediyoruz
+  
+  DockerMachinesSecurityGroup: # TCP port 2377 for cluster management communications, TCP and UDP port 7946 for communication among nodes, UDP port 4789 for overlay network traffic
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Enable SSH and HTTP for Docker Machines
@@ -73,21 +78,22 @@ Resources:
           FromPort: 4789
           ToPort: 4789
           CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
+        - IpProtocol: tcp # grand master daki visualizer icin
           FromPort: 8080
           ToPort: 8080
           CidrIp: 0.0.0.0/0
+  
   DockerSwarmManagerLT:
     Type: "AWS::EC2::LaunchTemplate"
     Properties:
       LaunchTemplateData:
-        ImageId: ami-0947d2ba12ee1ff75
+        ImageId: ami-0022f774911c1d690
         InstanceType: t2.micro
         KeyName: !Ref KeyPairName
         IamInstanceProfile: 
-          Arn: !GetAtt EC2ConnectProfile.Arn
+          Arn: !GetAtt EC2ConnectProfile.Arn # Instance Role eklerken Ref ile ekliyoruz. Launch Template Role eklerken arn ile ekliyoruz.
         SecurityGroupIds:
-          - !GetAtt DockerMachinesSecurityGroup.GroupId
+          - !GetAtt DockerMachinesSecurityGroup.GroupId # Sec group un goup id sini cekiyoruz
         UserData:
           Fn::Base64: 
             !Sub |
@@ -101,7 +107,10 @@ Resources:
               -o /usr/local/bin/docker-compose
               chmod +x /usr/local/bin/docker-compose
               yum install python3 -y
+              # mssh komutunun kullanilabilmesi icin asagidaki komut girilir
               pip3 install ec2instanceconnectcli
+              # ornek eval komutu: eval "$(echo "date")" -> parantez icinden date gelir. shell de date komutu calistirilir. 
+              # Yukarida ayarlanan policy-role-profile ayari sayesinde asagidaki komut ile Swarm in initialize edildigi grandmaster da DockerManager1 makinesine baglanti oncesi yes/no diye sormaksizin baglanilir, ardindan manager node token inin yer aldigi docker komutu cekilir ve bu komutu eval ile calistirarak swarm a manager olarak eklenmesi saglanir.
               eval "$(mssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no  \
                 --region ${AWS::Region} ${DockerManager1} docker swarm join-token manager | grep -i 'docker')"
               # uninstall aws cli version 1
@@ -109,19 +118,22 @@ Resources:
               curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
               unzip awscliv2.zip
               ./aws/install
+              # Dokumana gore: Amazon ECR Docker Credential Helper makes it easy for developers to use ECR without the need to use docker login or write logic to refresh tokens and provide transparent access to ECR repositories.
               yum install amazon-ecr-credential-helper -y
+              # Dokumana gore: Place the docker-credential-ecr-login binary on your PATH and set the contents of your ~/.docker/config.json file to be:
               mkdir -p /home/ec2-user/.docker
               cd /home/ec2-user/.docker
               echo '{"credsStore": "ecr-login"}' > config.json
+  
   DockerSwarmWorkerLT:
     Type: "AWS::EC2::LaunchTemplate"
     Properties:
       LaunchTemplateData:
-        ImageId: ami-0947d2ba12ee1ff75
+        ImageId: ami-0022f774911c1d690
         InstanceType: t2.micro
         KeyName: !Ref KeyPairName
         IamInstanceProfile: 
-          Arn: !GetAtt EC2ConnectProfile.Arn
+          Arn: !GetAtt EC2ConnectProfile.Arn # Instance a Role eklerken Ref ile ekliyoruz. Launch Template a Role eklerken arn ile ekliyoruz.
         SecurityGroupIds:
           - !GetAtt DockerMachinesSecurityGroup.GroupId
         UserData:
@@ -137,7 +149,10 @@ Resources:
               -o /usr/local/bin/docker-compose
               chmod +x /usr/local/bin/docker-compose
               yum install python3 -y
+              # mssh komutunun kullanilabilmesi icin asagidaki komut girilir
               pip3 install ec2instanceconnectcli
+              # ornek eval komutu: eval "$(echo "date")" -> parantez icinden date gelir. shell de date komutu calistirilir. 
+              # Yukarida ayarlanan policy-role-profile ayari sayesinde asagidaki komut ile Swarm in initialize edildigi grandmaster da DockerManager1 makinesine baglanti oncesi yes/no diye sormaksizin baglanilir, ardindan worker node token inin yer aldigi docker komutu cekilir ve bu komutu eval ile calistirarak swarm a worker olarak eklenmesi saglanir.
               eval "$(mssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no  \
                 --region ${AWS::Region} ${DockerManager1} docker swarm join-token worker | grep -i 'docker')"
               # uninstall aws cli version 1
@@ -145,24 +160,27 @@ Resources:
               curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
               unzip awscliv2.zip
               ./aws/install
+              # Dokumana gore: Amazon ECR Docker Credential Helper makes it easy for developers to use ECR without the need to use docker login or write logic to refresh tokens and provide transparent access to ECR repositories.
               yum install amazon-ecr-credential-helper -y
+              # Dokumana gore: Place the docker-credential-ecr-login binary on your PATH and set the contents of your ~/.docker/config.json file to be:
               mkdir -p /home/ec2-user/.docker
               cd /home/ec2-user/.docker
               echo '{"credsStore": "ecr-login"}' > config.json
+
   DockerManager1:
     Type: AWS::EC2::Instance
     Properties:
-      ImageId: ami-0947d2ba12ee1ff75
+      ImageId: ami-0022f774911c1d690
       InstanceType: t2.micro
       KeyName: !Ref KeyPairName
-      IamInstanceProfile: !Ref EC2ConnectProfile
+      IamInstanceProfile: !Ref EC2ConnectProfile # Instance a Role eklerken Ref ile ekliyoruz. Launch Template a Role eklerken arn ile ekliyoruz.
       SecurityGroupIds:
         - !GetAtt DockerMachinesSecurityGroup.GroupId
       Tags:                
-        -                        
+        - 
           Key: Name
           Value: !Sub Docker Manager 1st of ${AWS::StackName}
-      UserData: 
+      UserData: # Grand Master in kurulumu digerlerinden farkli, burada Swarm yüklü olacak
         Fn::Base64: 
           !Sub 
             - |
@@ -194,15 +212,19 @@ Resources:
               mkdir -p /home/ec2-user/.docker
               cd /home/ec2-user/.docker
               echo '{"credsStore": "ecr-login"}' > config.json
+              # ECR icinde repository create etmek icin:
               aws ecr create-repository \
                   --repository-name ${APP_REPO_NAME} \
                   --image-scanning-configuration scanOnPush=false \
                   --image-tag-mutability MUTABLE \
                   --region ${AWS::Region}
+              # image create ettigimiz bolum. Image i asagida environment variable olarak girdigimiz github repomuzda olusturacak
               docker build --force-rm -t "${ECR_REGISTRY}/${APP_REPO_NAME}:latest" ${GITHUB_REPO}
+              # image in cekilmesi
               docker push "${ECR_REGISTRY}/${APP_REPO_NAME}:latest"
               mkdir -p /home/ec2-user/phonebook
               cd /home/ec2-user/phonebook
+              # .env dosyasi olusturup icine ECR_REGISTRY ve APP_REPO_NAME tanimliyoruz
               cat << EOF | tee .env
               ECR_REGISTRY=${ECR_REGISTRY}
               APP_REPO_NAME=${APP_REPO_NAME}
@@ -214,8 +236,7 @@ Resources:
               APP_REPO_NAME: ahmet-repo/phonebook-app
               GITHUB_REPO: https://github.com/ahmet-cw/Project-202.git
               GIT_FILE_URL: https://raw.githubusercontent.com/ahmet-cw/Project-202/master/
-
-
+              
   DockerManager2:
     Type: AWS::EC2::Instance
     DependsOn:
