--- a/devops/projects/203-2-with-jenkins-pipeline-for-phonebook-app-on-docker-swarm/docker-compose.yml
+++ b/devops/projects/203-2-with-jenkins-pipeline-for-phonebook-app-on-docker-swarm/docker-compose.yml
@@ -17,8 +17,8 @@ services:
         target: /docker-entrypoint-initdb.d/init.sql # mysql direktifi: baslangicta bir db init etmek istiyorsak bunu yazmaliyiz. Swarm mimarisinde mqsql in hangi node da ayaga kalkacagi belli olmadigi icin db init etmek icin genel bir adreslemeyi bu sekilde yapariz
 
   app-server:
-    #image: 046402772087.dkr.ecr.us-east-1.amazonaws.com/clarusway-repo/phonebook-app:latest
-    image: "${ECR_REGISTRY}/${APP_REPO_NAME}:latest" # ECR_REGISTRY ve APP_REPO_NAME bilgisini ayni dizinde .env isimli bir dosyada tanimlarsak ordan ceker alir
+    image: 241599752287.dkr.ecr.us-east-1.amazonaws.com/leon-repo/phonebook-app:latest
+    #image: "${ECR_REGISTRY}/${APP_REPO_NAME}:latest" # ECR_REGISTRY ve APP_REPO_NAME bilgisini ayni dizinde bulunan jenkinsfile dan alir
     deploy:
       mode: global # default deger replicated dir. Swarm load balancer yaparak servisleri dagitir. her node da kesin kurulmasini istedigimiz bir servisi global tanimlariz
       update_config: # konteynirin hangi kurallara gore update edilecegini belirtiriz. 
