203-2-with-jenkins-pipeline-for-phonebook-app-on-docker-swarm was changed rev3

--- a/devops/projects/203-2-with-jenkins-pipeline-for-phonebook-app-on-docker-swarm/Jenkinsfile
+++ b/devops/projects/203-2-with-jenkins-pipeline-for-phonebook-app-on-docker-swarm/Jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     agent {
-        label 'master'
+        label 'any'
     }
     environment{
         PATH=sh(script:"echo $PATH:/usr/local/bin", returnStdout:true).trim()
