203-2-with-jenkins-pipeline-for-phonebook-app-on-docker-swarm was changed rev3

--- a/devops/projects/203-2-with-jenkins-pipeline-for-phonebook-app-on-docker-swarm/Jenkinsfile
+++ b/devops/projects/203-2-with-jenkins-pipeline-for-phonebook-app-on-docker-swarm/Jenkinsfile
@@ -1,5 +1,7 @@
 pipeline {
-    agent any
+    agent {
+        label 'any'
+    }
     environment{
         PATH=sh(script:"echo $PATH:/usr/local/bin", returnStdout:true).trim()
         // returnStdout:true).trim() sag ve sol taraftaki fazlaliklari trasliyor ve PATH e ekleme yapiyoruz
